<resources>
    <string name="app_name">Kolor Weather</string>
    <string name="description">No Data</string>
    <string name="localization">Alcatraz, California</string>
    <string name="temp_placeholder">%d C</string>
    <string name="precip_placeholder">%d %%</string>
    <string name="precip">PRECIP</string>
    <string name="temp">TEMP</string>
    <string name="daily_button_text">DAILY WEATHER</string>
    <string name="hourly_button_text">HOURLY WEATHER</string>
    <string name="icon_description">weather icon</string>
    <string name="language">en</string>
    <string name="units">si</string>
    <string name="network_error">NETWORK ERROR</string>
    <string name="retry">RETRY?</string>
    <string name="daily_weather">Daily Weather</string>
    <string name="summary_of_the_week">Summary of the week</string>
    <string name="hourly_weather">Hourly Weather</string>
    <string name="summary_of_the_day">Summary of the day</string>
    <string name="error_permission">You must enable the location permission</string>
</resources>
